--- a/docs/thesis/backMatter/acronimi.tex
+++ b/docs/thesis/backMatter/acronimi.tex
@@ -4,6 +4,7 @@
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{aqi}{AQI}{Air Quality Index}
 \newacronym{bson}{BSON}{Binary JSON}
+\newacronym{cap}{CAP}{Codice Avviamento Postale}
 \newacronym{cli}{CLI}{Command Line Interface}
 \newacronym{co}{CO}{Monossido di carbonio}
 \newacronym{cqrs}{CQRS}{Command Query Responsibility Segregation}
@@ -21,6 +22,7 @@
 \newacronym{iot}{IOT}{Internet of Things}
 \newacronym{iqa}{IQA}{Indice di Qualità dell'Aria}
 \newacronym{json}{JSON}{Javascript Object Notation}
+\newacronym{lifo}{LIFO}{Last In First Out}
 \newacronym{no2}{NO2}{Diossido di azoto}
 \newacronym{npm}{npm}{Node Package Manager}
 \newacronym{o3}{O3}{Ozono}
@@ -39,3 +41,4 @@
 \newacronym{ttl}{TTL}{Time To Live}
 \newacronym{wgs84}{WGS84}{World Geodetic System 1984}
 \newacronym{xml}{XML}{Extensible Markup Language}
+\newacronym{ztl}{ZTL}{Zona Traffico Limitato}
