--- a/docs/thesis/backMatter/acronimi.tex
+++ b/docs/thesis/backMatter/acronimi.tex
@@ -7,6 +7,8 @@
 \newacronym{cap}{CAP}{Codice Avviamento Postale}
 \newacronym{cli}{CLI}{Command Line Interface}
 \newacronym{co}{CO}{Monossido di carbonio}
+\newacronym{co2}{CO2}{Anidride carbonica}
+\newacronym{cors}{CORS}{Cross-Origin Resource Sharing}
 \newacronym{cqrs}{CQRS}{Command Query Responsibility Segregation}
 \newacronym{crs}{CRS}{Coordinate Reference Systems}
 \newacronym{css}{CSS}{Cascading Style Sheets}
@@ -18,11 +20,15 @@
 \newacronym{gis}{GIS}{Geographic Information System}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{html}{HTML}{HyperText Markup Language}
+\newacronym{http}{HTTP}{HyperText Transfer Protocol}
 \newacronym{iogp}{IOGP}{International Association of Oil \& Gas Producers}
 \newacronym{iot}{IOT}{Internet of Things}
+\newacronym{ip}{IP}{Internet Protocol}
 \newacronym{iqa}{IQA}{Indice di Qualità dell'Aria}
+\newacronym{iso}{ISO}{Internation Standard Organization}
 \newacronym{json}{JSON}{Javascript Object Notation}
-\newacronym{lifo}{LIFO}{Last In First Out}
+\newacronym{kraft}{KRaft}{Kafka Raft}
+\newacronym{fifo}{FIFO}{First In First Out}
 \newacronym{no2}{NO2}{Diossido di azoto}
 \newacronym{npm}{npm}{Node Package Manager}
 \newacronym{o3}{O3}{Ozono}
