--- a/docs/thesis/mainMatter/02-cap.tex
+++ b/docs/thesis/mainMatter/02-cap.tex
@@ -1,6 +1,7 @@
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
 \chapter{Tecnologie}
+\label{chapter:second}
 
 Nel seguente capitolo verranno presentate le tecnologie adottate per la realizzazione del progetto AirQualityInsight.
 Data la natura di applicazione web del progetto, le tecnologie sono state classificate distinguendo tra quelle
