--- a/docs/thesis/mainMatter/03-cap.tex
+++ b/docs/thesis/mainMatter/03-cap.tex
@@ -1,5 +1,6 @@
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \chapter{Sviluppo dell'elaborato di progetto}
+\label{chapter:third}
 
 In questo capitolo verrà descritto il progetto sviluppato, in particolare l'architettura generale del sistema,
 la descrizione dei singoli componenti e l'applicazione front-end.
